--- a/index.html
+++ b/index.html
@@ -30,25 +30,20 @@
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
                     <a class="navbar-item">
-                        Home
+                        Início
                     </a>
 
                     <a class="navbar-item">
-                        Documentation
+                        Galeria
                     </a>
-                </div>
 
-                <div class="navbar-end">
-                    <div class="navbar-item">
-                        <div class="buttons">
-                            <a class="button is-primary">
-                                <strong>Sign up</strong>
-                            </a>
-                            <a class="button is-light">
-                                Log in
-                            </a>
-                        </div>
-                    </div>
+                    <a class="navbar-item">
+                        Contato
+                    </a>
+
+                    <a class="navbar-item">
+                        Área do Cliente
+                    </a>
                 </div>
             </div>
         </nav>
@@ -237,9 +232,7 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                <strong>Rodrigo Fotografia </strong> by <a href="https://jgthms.com">Caiua França</a>.
             </p>
         </div>
     </footer>
